@@ -163,7 +163,7 @@ Declares the construction denoted by {\qualid} as a coercion between
 \item {\qualid} \errindex{is not a function}
 \item \errindex{Cannot find the source class of {\qualid}}
 \item \errindex{Cannot recognize {\class$_1$} as a source class of {\qualid}}
-\item {\qualid} \errindex{does not respect the inheritance uniform condition}
+\item {\qualid} \errindex{does not respect the uniform inheritance condition}
 \item \errindex{Found target class {\class} instead of {\class$_2$}}
 
 \end{ErrMsgs}
